firmware/defmt-test/macros/tests/ui/before_each-has-invalid-function-signature.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[before_each]
    fn hello(a: i32, b: i32) -> i32 {
        a + b
    }
}
